# project-eml-file-management-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
eml_manager/: __main__.py  bundle.py  config.py  database.py  monitor.py  normalizer.py  parser.py  processor.py
eml_manager/ui/: app.py  date_picker.py  main_view.py  settings_dialog.py
tests/: test_cli.py  test_database.py  test_normalizer.py  test_parser.py  test_processor.py
tests/fixtures/: display-name-only.eml  encoded-utf8-subject.eml  inline-image.eml  no-date.eml  simple.eml  with-attachment.eml
