[project]
name = "eml-manager"
version = "0.1.0"
description = "Offline desktop application for managing .eml files"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "watchdog>=4.0",
    "pyyaml>=6.0",
    "tkinterdnd2>=0.3",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[project.scripts]
eml-manager = "eml_manager.__main__:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eml_manager*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
